# pyjq

./: .gitignore  Pipfile  README.md  _pyjq.pyx  pyproject.toml  setup.py
.github/workflows/: build.yml
